tests/NormalTests/paczka1/fuzzy1/60321289.err
Error in line 2: KHLr S868 88,7
Error in line 4: KHLr A465 21,3
Error in line 1: M1AkTkz A37 90,6
Error in line 8: M1AkTkz A517 39,0
Error in line 22: C7V A37 19,6
Error in line 36: JKc8 A517 55,26
